--- a/BitcubeEvalUsingIdentity/Pages/Index.cshtml
+++ b/BitcubeEvalUsingIdentity/Pages/Index.cshtml
@@ -5,16 +5,14 @@
 }
 
 <div>
-    <div class="jumbotron text-center">
+    <div style="background-color:#e0e0e0;" class="jumbotron text-center">
         <h1 class="display-4">Welcome</h1>
     </div>
-    
     <h3>Assessment Project - Section 1</h3>
-    <h5>Project Specifications:</h5>
+    <h5>Section Specifications:</h5>
     <p>
         Use any environment / language you're comfortable with (preferable C#) to develop a web application that provides the following functionality:
-    </p>
-    <p>
+        <br />
         Create a registration page that allows users to register to use the website. When a user registers, the following criteria should be met:
     </p>
     <ul>
@@ -22,5 +20,12 @@
         <li>User must supply at least their first name and last name</li>
         <li>Password must have at least 1 uppercase character, 1 lowercase character, 1 special character,1 number and must be at least 6 characters long</li>
         <li>Password must be encrypted before being saved</li>
+    </ul>
+    <h3>Assessment Project - Section 2</h3>
+    <h5>Section Specifications:</h5>
+    <p>Create a login page, where a user can log in using their email address and password.</p>
+    <ul>
+        <li>There should be an option for the user to tell the site to remember their email address, so they don’t have to complete it every time they want to log in.</li>
+        <li>Once a user successfully logs in, they should be directed to the profile page.</li>
     </ul>
 </div>
