--- a/BitcubeEvalUsingIdentity/Pages/Shared/_Layout.cshtml
+++ b/BitcubeEvalUsingIdentity/Pages/Shared/_Layout.cshtml
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <header style="background-color:#e0e0e0;">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">BitcubeEvalUsingIdentity</a>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
@@ -24,7 +24,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer style="background-color:#e0e0e0;" class="border-top footer text-muted">
         <div class="container">
             &copy; 2020 - BitcubeEvalUsingIdentity
         </div>
