--- a/BitcubeEvalUsingIdentity/Pages/Shared/_LoginPartial.cshtml
+++ b/BitcubeEvalUsingIdentity/Pages/Shared/_LoginPartial.cshtml
@@ -8,6 +8,12 @@
         @if (SignInManager.IsSignedIn(User))
         {
             <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Profile">Profile</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Friends">Friends</a>
+            </li>
+            <li class="nav-item">
                 <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Profile">Hello @UserManager.GetUserName(User)!</a>
             </li>
             <li class="nav-item">
