--- a/BitcubeEvalUsingIdentity/Pages/Index.cshtml
+++ b/BitcubeEvalUsingIdentity/Pages/Index.cshtml
@@ -28,4 +28,20 @@
         <li>There should be an option for the user to tell the site to remember their email address, so they don’t have to complete it every time they want to log in.</li>
         <li>Once a user successfully logs in, they should be directed to the profile page.</li>
     </ul>
+    <h3>Assessment Project - Section 3</h3>
+    <h5>Section Specifications:</h5>
+    <p>Each page that a user sees once they have been validated should have navigation buttons with the following buttons:</p>
+    <ul>
+        <li>Profile – redirects to the profile page.</li>
+        <li>Friends – redirects to the friends page.</li>
+        <li>Logout – Should abandon the user’s current session and redirect them to the login page.</li>
+    </ul>
+    <h3>Assessment Project - Section 4</h3>
+    <h5>Section Specifications:</h5>
+    <p>Profile page:</p>
+    <ul>
+        <li>Displays the information that a user completed when they registered, except for their password.</li>
+        <li>Should provide an edit function, that allows the user to update the information they provided when they registered, except for password.</li>
+        <li>Should provide a change password function, that allows a user to change their password, after providing their current password again.</li>
+    </ul>
 </div>
